fix: fixing visual bugs with colors and components gap

--- a/src/components/Form/ContactForm.css
+++ b/src/components/Form/ContactForm.css
@@ -1,5 +1,4 @@
 .message-form {
-  background-color: whitesmoke;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
