--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -1,6 +1,5 @@
 .contact-container {
   min-height: 100vh;
-  background-color: whitesmoke;
   display: grid;
   align-content: center;
 }
