--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -1,5 +1,4 @@
 .projects-container {
-  background-color: whitesmoke;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -18,7 +17,6 @@
 
 .projects-grid {
   gap: 10px;
-  height: 90vh;
   display: grid;
   grid-template-columns: repeat(3, 33%);
   justify-items: center;
