--- a/src/routes/App.css
+++ b/src/routes/App.css
@@ -10,7 +10,7 @@
 }
 
 .app-container {
-  background-color: whitesmoke;
+  background-color: var(--main-color);
   display: flex;
   justify-content: center;
 }
